# fastapicookbook

./: .gitignore  README.md
async_example/: main.py  timing_api_calls.py
bookstore/src/: main.py  models.py
bookstore/src/sql_example/: database.py
fastapi/: pyvenv.cfg
first_full_api/: conftest.py  main.py  pyproject.toml  security.py  test_main.py
first_full_api/task_manager_app/: models.py  operations.py  tasks.csv
intro/src/: main.py  router.py
nosql_example/: database.py  main.py
saas_app/: main.py  models.py  operations.py  premium_access.py  pyproject.toml  rbac.py  responses.py  saas.db  security.py
sql_example/: database.py  main.py
src/: main.py
